updating css and handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<h1>Eat-Da-Burger!</h1>
+<h1 class="header">Eat-Da-Burger!</h1>
 
 <h2>Food that hasn't been devoured!</h2>
 
@@ -19,7 +19,7 @@
   {{/if}}
   {{/each}}
 </ul>
-
+<div class="addFood">
 <h2>Add something</h2>
 <form id="create-form">
 
@@ -36,3 +36,4 @@
 
   <button type="submit">Add Burger</button>
 </form>
+</div>
