--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,11 @@
+body{
+  background-color: bisque;
+}
+
 li {
     padding: 5px;
     margin: 5px;
-    background: #faebd7;
+    background: #f58b00;
   }
   
   .label {
@@ -11,10 +15,25 @@ li {
   .create-update-form {
     padding: 5px;
     margin: 5px;
-    background: rgb(201, 130, 0);
+     background: rgb(201, 130, 0); 
   }
   
   .form-group {
     margin-bottom: 5px;
   }
-  
+.header {
+  font-family: sans-serif;
+  font-size: xx-large;
+  padding: 5px;
+  margin: 5px;
+  text-align: center;
+  color:orange;
+  background-color: rgba(14, 107, 14, 0.39);
+}
+.addFood {
+  font-family: sans-serif;
+  padding: 5px;
+  text-align: center;
+  background-color: rgba(14, 107, 14, 0.39);
+
+}
