--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <h1 class="header">Eat-Da-Burger!</h1>
-
+<div class="center"> <img id="burgerPic" src="\assets\css\burger.png" alt="burger pic clip art"></div>
 <h2>Food that hasn't been devoured!</h2>
 
 <ul>
