--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,8 @@
 <li>
 	{{burger_name}}
-
-	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
+	 <button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}"> 
 		{{#if devour}}Already devoured!{{else}}Devour!{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button> --}}
 </li>
