--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
   {{/each}}
 </ul>
 
-<h2>Food that has been devoured!</h2>
+<h2 class="devoured">Food that has been devoured!</h2>
 
 <ul>
   {{#each burgers}}
